<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item name</string>
    <string name="item_amount">Item amount</string>
    <string name="expired_date">Expired date</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="created_date">Created date</string>
    <string name="delete">Delete</string>
    <string name="enter_category">Enter category</string>
    <string name="select_measurement">Select measurement</string>
    <string name="select_location">Select location</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="last_took">Last took</string>
    <string name="favorite">Favorite</string>
    <string name="filter">Filter</string>
    <string name="transfer">Transfer</string>
    <string name="submit">Submit</string>
    <string name="select_category">Select category</string>
    <string name="frequency">Frequency</string>
    <string name="list_adapter_format">%1$s | %2$s | %3$s</string>
    <string name="list_adapter_format_expired"> | %1$s </string>
    <string name="card_adapter_stock_format">Amount: %1$.1f</string>
    <string name="card_adapter_take_format">Can take %1$.1f</string>
    <string name="amount">Amount</string>

    <string-array name="span_array">
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>

    <string-array name="location_array">
        <item>Home</item>
        <item>Car</item>
        <item>Work</item>
        <item>Traveling</item>
        <item>Wallet</item>
    </string-array>

    <string-array name="category_array">
        <item>Medicine</item>
        <item>Food</item>
        <item>Cleaners</item>
        <item>Pets</item>
        <item>Other</item>
        <item>None</item>
    </string-array>

    <string-array name="measurements_array">
        <item>Teaspoon</item>
        <item>Dessertspoon</item>
        <item>Tablespoon</item>
        <item>Fluid Ounce</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Quart</item>
        <item>Gallon</item>
        <item>Ounce</item>
        <item>Pound</item>
        <item>Inch</item>
        <item>Feet</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Tablet</item>
        <item>Caplet</item>
        <item>Roll</item>
        <item>Box</item>
        <item>Other</item>
        <item>None</item>
    </string-array>
</resources>